<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Bt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="738dp"
        android:scaleType="fitXY"
        tools:src="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/diseno_fondo_abstracto2" />


    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="647dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txt_rut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_rut"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_nombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/txt_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_edad"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/txt_carrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_carrera"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_guardar" />

        <Button
            android:id="@+id/bt_mostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_mostrar" />

        <Button
            android:id="@+id/bt_modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_modificar" />

        <Button
            android:id="@+id/bt_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_eliminar" />

        <TextView
            android:id="@+id/txt_datos_mostrados"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:text="@string/txt_datos_mostrados"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_volver" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>